# tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md
src/app/: application.cpp  application.h  player.cpp  player.h
src/gfx/: app_message.cpp  app_message.h  cell.cpp  cell.h  grid.cpp  grid.h
src/main/: main.cpp
